# rust-simple-sensors

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: dht11.rs  dhtxx.rs  ds18b20.rs  lib.rs  mcp3008.rs  mcp300x.rs
tests/: dht11_test.rs  dhtxx_test.rs  fake_spi_test.rs  mcp3008_test.rs  mcp300x_test.rs
tests/fake_hal/: mod.rs
tests/fake_hal/concurrent/: mod.rs
tests/fake_hal/digital/: mod.rs
tests/fake_hal/spi/: mod.rs
