[package]
authors = [
    "MorganR <roffmorgan@gmail.com>",
]
description = " A sensor communication library "
edition = "2018"
license = "MIT OR Apache-2.0"
name = "sensors"
readme = "README.md"
repository = "https://github.com/MorganR/rust-sensors"
version = "0.1.0"

[dependencies]
embedded-hal = { path = "../embedded-hal" }
tokio = { version = "1.4.0", features = ["macros", "rt", "time"] }