[package]
authors = [
    "MorganR <roffmorgan@gmail.com>",
]
description = "A library for communicating with common sensors and peripherals. Avoids the std library, and uses async operations where possible."
edition = "2018"
keywords = ["sensors", "hal", "no_std", "driver", "drivers", "dht", "dht11"]
license = "MIT OR Apache-2.0"
name = "simple-sensors"
readme = "README.md"
repository = "https://github.com/MorganR/rust-simple-sensors"
version = "0.1.0"

[dependencies]
embedded-hal = { path = "../embedded-hal" }

[dev-dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.4.0", features = ["macros", "rt", "time"] }
